# tinyclunx33

./: README.md  west.yml
.github/workflows/: zephyr.yml
Docs/misc/: tinyCLUNX baseboard review items.xlsx  tinyCLUNX33.SchLib
docs/: Doxyfile  appnote.md  appnote_debugging_usb_video.md  appnote_firmware.md  appnote_remote_programming.md  appnote_zephyr_sdk.md  carrier_devkit.md  doxygen-custom.css  som_flash.md  som_usb.md
docs/misc/: tinyCLUNX_baseboard_review_items.xlsx
firmware/zephyr_cdc_rtl/src/: main.c
zephyr/: patches.yml
zephyr/boards/common/: ecpprog_mpremote.board.cmake
zephyr/boards/tinyvision/tinyclunx33/: Kconfig.defconfig  Kconfig.tinyclunx33  board.cmake  board.yml  revision.cmake  tinyclunx33_common.dtsi  tinyclunx33_rev2.dtsi  tinyclunx33_rtl_1_2.dts  tinyclunx33_rtl_1_2_slot0.dts  tinyclunx33_rtl_1_2_slot0_rev2.overlay
zephyr/drivers/: CMakeLists.txt  Kconfig
zephyr/drivers/debug/: CMakeLists.txt  Kconfig  Kconfig.spinex  spinex-event-logger.c  spinex-reg-file.c
zephyr/drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.memcpy  Kconfig.tinyvision  flash_memcpy.c
zephyr/drivers/i2c/: i2c_opencores.c
zephyr/drivers/usb/udc/: udc_dwc3.c  udc_dwc3.h
zephyr/drivers/video/: imx219.c
zephyr/dts/bindings/: vendor-prefixes.txt
zephyr/patches/: zephyr_ecpprog_divider.patch  zephyr_usb3_4_3.patch
zephyr/samples/: README_coremark.md  README_rtos-benchmark.md
zephyr/samples/coremark/: README.md
zephyr/samples/coremark/zephyr/: CMakeLists.txt  core_portme.c  core_portme.h  prj.conf
zephyr/samples/usb_cdc_mute/: CMakeLists.txt  README.rst  app.overlay  prj.conf
zephyr/samples/usb_cdc_shell/: CMakeLists.txt
zephyr/samples/usb_msc_readonly/: README.rst  app.overlay  prj.conf
zephyr/samples/with_mcuboot/: README.rst  prj.conf  sysbuild.conf
zephyr/scripts/: ecpprog_mpremote.py
zephyr/subsys/: CMakeLists.txt
(+33 files in other folders)
